charts/nginz: use singular "account" for consistency with other resources.

--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -56,7 +56,7 @@ nginx_conf:
   allowlisted_origins:
     - webapp
     - teams
-    - accounts
+    - account
   upstreams:
     cargohold:
     - path: ~* ^/conversations/([^/]*)/assets
