--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -52,6 +52,11 @@ nginx_conf:
   - ~* ^/conversations/([^/]*)/call/state
   - /search/top
   - /search/common
+  # -- The origins from which we allow CORS requests. These are combined with 'external_env_domain' to form a full url
+  allowlisted_origins:
+    - webapp
+    - teams
+    - account
   upstreams:
     cargohold:
     - path: ~* ^/conversations/([^/]*)/assets
@@ -79,7 +84,6 @@ nginx_conf:
       envs:
       - all
       allow_credentials: true
-      restrict_whitelisted_origin: true
       max_body_size: "0"
       disable_request_buffering: true
     brig:
@@ -149,7 +153,6 @@ nginx_conf:
       envs:
       - all
       allow_credentials: true
-      restrict_whitelisted_origin: true
     - path: /bot/self
       envs:
       - all
@@ -170,13 +173,11 @@ nginx_conf:
       envs:
       - all
       allow_credentials: true
-      restrict_whitelisted_origin: true
       disable_zauth: true
     - path: /activate
       envs:
       - all
       allow_credentials: true
-      restrict_whitelisted_origin: true
       disable_zauth: true
     - path: /delete
       envs:
@@ -238,7 +239,6 @@ nginx_conf:
       - all
       disable_zauth: true
       allow_credentials: true
-      restrict_whitelisted_origin: true
       unlimited_requests_endpoint: true
     - path: /login
       envs:
