--- a/cabal.project
+++ b/cabal.project
@@ -71,15 +71,6 @@ source-repository-package
 
 source-repository-package
     type: git
-    location: https://github.com/haskell-servant/servant.git
-    tag: 75db4a5327d6d04ae2460bd5ffd008fe16197ba8
-    subdir: servant
-            servant-client
-            servant-client-core
-            servant-server
-
-source-repository-package
-    type: git
     location: https://github.com/kim/hs-collectd
     tag: 885da222be2375f78c7be36127620ed772b677c9
 
@@ -150,6 +141,15 @@ source-repository-package
     type: git
     location: https://github.com/wireapp/saml2-web-sso
     tag: 4227e38be5c0810012dc472fc6931f6087fbce68
+
+source-repository-package
+    type: git
+    location: https://github.com/wireapp/servant.git
+    tag: a4e15fe75f294816d9ead19ed8a48cae8e0b76e7
+    subdir: servant
+            servant-client
+            servant-client-core
+            servant-server
 
 source-repository-package
     type: git
