--- a/stack.yaml
+++ b/stack.yaml
@@ -140,7 +140,7 @@ extra-deps:
   commit: 7546a1a25635ef65183e3d44c1052285e8401608    # master (Jul 21, 2016)
 
 - git: https://github.com/wireapp/hsaml2
-  commit: b652ec6e69d1647e827cbee0fa290605ac09dc63  # https://github.com/wireapp/hsaml2/pull/9 (Feb 18, 2021)
+  commit: ef7b1de45ab0ea3a0a333b335579a02d8f88340c  # (Jan 27, 2022)
 
 - git: https://github.com/wireapp/http-client
   commit: 9100baeddbd15d93dc58a826ae812dafff29d5fd    # master (Jun 16, 2020)
