--- a/charts/cassandra-migrations/templates/galley-migrate-data.yaml
+++ b/charts/cassandra-migrations/templates/galley-migrate-data.yaml
@@ -1,6 +1,7 @@
 # This jobs runs migrations on the galley DB using the galley-migrate-data tool.
 # The source for the tool can be found at services/galley in the wire-server
 # repository.
+{{- if .Values.enableGalleyMigrations }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -37,3 +38,4 @@ spec:
            - "9042"
            - --cassandra-keyspace
            - galley
+{{- end }}
