--- a/libs/wire-api/package.yaml
+++ b/libs/wire-api/package.yaml
@@ -105,6 +105,7 @@ tests:
     - base
     - bytestring
     - bytestring-conversion
+    - bytestring-arbitrary
     - cassava
     - currency-codes
     - directory
