--- a/libs/wire-api/package.yaml
+++ b/libs/wire-api/package.yaml
@@ -105,7 +105,7 @@ tests:
     - base
     - bytestring
     - bytestring-conversion
-    - bytestring-arbitrary
+    - bytestring-arbitrary >=0.1.3
     - cassava
     - currency-codes
     - directory
