Use maybe{To,From}Union instead of hand-written AsUnion instances

--- a/libs/wire-api/package.yaml
+++ b/libs/wire-api/package.yaml
@@ -41,6 +41,7 @@ library:
   - currency-codes >=2.0
   - deriving-aeson >=0.2
   - deriving-swagger2
+  - either
   - email-validate >=2.0
   - errors
   - extended
