--- a/stack.yaml
+++ b/stack.yaml
@@ -77,6 +77,7 @@ nix:
 allow-newer: true
 
 extra-deps:
+- bytestring-arbitrary-0.1.3@sha256:14db64d4fe126fbad2eb8d3601bfd80a693f3131e2db0e76891feffe44f10df8,1773
 - git: https://github.com/fimad/prometheus-haskell
   commit: 2e3282e5fb27ba8d989c271a0a989823fad7ec43
   subdirs:
