Initial implementation of key package upload

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -58,6 +58,7 @@ library
       Brig.Data.Connection
       Brig.Data.Instances
       Brig.Data.LoginCode
+      Brig.Data.MLS.KeyPackage
       Brig.Data.PasswordReset
       Brig.Data.Properties
       Brig.Data.Types
