--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -36,7 +36,10 @@ library
       Wire.API.Event.Team
       Wire.API.Message
       Wire.API.Message.Proto
+      Wire.API.MLS.CipherSuite
+      Wire.API.MLS.Credential
       Wire.API.MLS.KeyPackage
+      Wire.API.MLS.Serialisation
       Wire.API.Notification
       Wire.API.Properties
       Wire.API.Provider
