--- a/libs/types-common/types-common.cabal
+++ b/libs/types-common/types-common.cabal
@@ -3,8 +3,6 @@ cabal-version: 1.12
 -- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
---
--- hash: c96f28e5df032a16461ccd4944f8fb85415e9f9ca5290959f15954c8429ded7d
 
 name:           types-common
 version:        0.16.0
@@ -95,6 +93,7 @@ library
     , base ==4.*
     , base16-bytestring >=0.1
     , base64-bytestring >=1.0
+    , binary
     , bytestring >=0.10
     , bytestring-conversion >=0.2
     , cassandra-util
