--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -599,6 +599,7 @@ executable galley-schema
       V58_ConversationAccessRoleV2
       V59_FileSharingLockStatus
       V60_TeamFeatureSndFactorPasswordChallenge
+      V61_MLSCreateConversation
       Paths_galley
   hs-source-dirs:
       schema/src
