SQSERVICES-1232 Prevent CSV Injection (#2096)
* quote disallowed chars
* additional tests
* changelog
* add extra-deps to stack.yaml

--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -563,6 +563,7 @@ test-suite wire-api-tests
       Test.Wire.API.Roundtrip.CSV
       Test.Wire.API.Routes
       Test.Wire.API.Swagger
+      Test.Wire.API.Team.Export
       Test.Wire.API.Team.Member
       Test.Wire.API.User
       Test.Wire.API.User.RichInfo
@@ -618,6 +619,7 @@ test-suite wire-api-tests
     , aeson-qq
     , base
     , bytestring
+    , bytestring-arbitrary >=0.1.3
     , bytestring-conversion
     , case-insensitive
     , cassava
