--- a/libs/wire-api/package.yaml
+++ b/libs/wire-api/package.yaml
@@ -106,6 +106,7 @@ tests:
     - base
     - bytestring
     - bytestring-conversion
+    - bytestring-arbitrary >=0.1.3
     - cassava
     - currency-codes
     - directory
