--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -41,6 +41,7 @@ library
       Wire.API.MLS.KeyPackage
       Wire.API.MLS.Proposal
       Wire.API.MLS.Serialisation
+      Wire.API.MLS.Servant
       Wire.API.Notification
       Wire.API.Properties
       Wire.API.Provider
