--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -66,6 +66,7 @@ library
       Wire.API.Routes.Public.Util
       Wire.API.Routes.QualifiedCapture
       Wire.API.Routes.Version
+      Wire.API.Routes.Version.Wai
       Wire.API.Routes.WebSocket
       Wire.API.ServantProto
       Wire.API.Swagger
@@ -220,6 +221,7 @@ library
     , uuid >=1.3
     , vector >=0.12
     , wai
+    , wai-utilities
     , wai-websockets
     , websockets
     , wire-message-proto-lens
