--- a/services/proxy/proxy.cabal
+++ b/services/proxy/proxy.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 4b0eeea49373b98eff5aa94f2c7ec6e198b9db932ceeb3ff4311ffc25ab44b86
+-- hash: c31f9c4911b4326363bf2d4063f32f056fd40c97d528cbbec21cbe97ccdf1833
 
 name:           proxy
 version:        0.9.0
@@ -103,6 +103,7 @@ library
     , wai-routing >=0.12
     , wai-utilities >=0.14.3
     , warp >=3.0
+    , wire-api
   default-language: Haskell2010
 
 executable proxy
