--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -221,6 +221,7 @@ library
     , uuid >=1.3
     , vector >=0.12
     , wai
+    , wai-extra
     , wai-utilities
     , wai-websockets
     , websockets
