--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -324,8 +324,7 @@ test-suite wire-api-golden-tests
       Test.Wire.API.Golden.Generated.NewBotRequest_provider
       Test.Wire.API.Golden.Generated.NewBotResponse_provider
       Test.Wire.API.Golden.Generated.NewClient_user
-      Test.Wire.API.Golden.Generated.NewConvManaged_user
-      Test.Wire.API.Golden.Generated.NewConvUnmanaged_user
+      Test.Wire.API.Golden.Generated.NewConv_user
       Test.Wire.API.Golden.Generated.NewLegalHoldClient_team
       Test.Wire.API.Golden.Generated.NewLegalHoldService_team
       Test.Wire.API.Golden.Generated.NewOtrMessage_user
