Change client identity serialisation format
The current format is `uid:cid@domain`, which agrees with the way
identities are serialised in core-crypto.

--- a/libs/wire-api/package.yaml
+++ b/libs/wire-api/package.yaml
@@ -29,6 +29,7 @@ library:
   - attoparsec >=0.10
   - base64-bytestring >=1.0
   - binary
+  - binary-parsers
   - bytestring >=0.9
   - bytestring-conversion >=0.2
   - cassandra-util
