--- a/deploy/services-demo/conf/nginz/nginx.conf
+++ b/deploy/services-demo/conf/nginz/nginx.conf
@@ -219,6 +219,11 @@ http {
       proxy_pass http://brig;
     }
 
+    location /verification-code/send {
+      include common_response_no_zauth.conf;
+      proxy_pass http://brig;
+    }
+
     ## brig authenticated endpoints
 
     location /self {
