--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -660,6 +660,7 @@ executable galley-schema
     V68_MLSCommitLock
     V69_MLSProposal
     V70_MLSCipherSuite
+    V71_DropManagedConversations
 
   hs-source-dirs:     schema/src
   default-extensions:
