Remove ToJSON/FromJSON for UserIdentity, use Schema for User
The ToJSON for UserIdentity encoded nulls, but every other object which used it
didn't encode nulls. So, it was better to remove it

--- a/libs/wire-api/package.yaml
+++ b/libs/wire-api/package.yaml
@@ -123,6 +123,7 @@ tests:
     - pretty
     - proto-lens
     - QuickCheck
+    - schema-profunctor
     - string-conversions
     - swagger2
     - tasty
