--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -65,6 +65,8 @@ library
       Wire.API.Routes.Public.Spar
       Wire.API.Routes.Public.Util
       Wire.API.Routes.QualifiedCapture
+      Wire.API.Routes.Version
+      Wire.API.Routes.Version.Wai
       Wire.API.Routes.WebSocket
       Wire.API.ServantProto
       Wire.API.Swagger
@@ -97,6 +99,7 @@ library
       Wire.API.User.Search
       Wire.API.UserMap
       Wire.API.Util.Aeson
+      Wire.API.VersionInfo
       Wire.API.Wrapped
   other-modules:
       Paths_wire_api
@@ -218,6 +221,8 @@ library
     , uuid >=1.3
     , vector >=0.12
     , wai
+    , wai-extra
+    , wai-utilities
     , wai-websockets
     , websockets
     , wire-message-proto-lens
