Sqservices 1157 2 mf for generating SCIM token errors and renaming (#2135)
* failure responses added

* renamed code to verification_code

* added roundtrip and golden tests

--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -467,6 +467,7 @@ test-suite wire-api-golden-tests
       Test.Wire.API.Golden.Manual.QualifiedUserClientPrekeyMap
       Test.Wire.API.Golden.Manual.UserClientPrekeyMap
       Test.Wire.API.Golden.Manual.UserIdList
+      Test.Wire.API.Golden.Manual.CreateScimToken
       Test.Wire.API.Golden.Protobuf
       Test.Wire.API.Golden.Runner
       Paths_wire_api
