--- a/charts/nginx-ingress-controller/values.yaml
+++ b/charts/nginx-ingress-controller/values.yaml
@@ -4,6 +4,10 @@ nginx-ingress:
   controller:
     config:
       # NOTE: These are some sane defaults (compliant to TR-02102-2), you may want to overrride them on your own installation
+      # For TR-02102-2 see https://www.bsi.bund.de/SharedDocs/Downloads/EN/BSI/Publications/TechGuidelines/TG02102/BSI-TR-02102-2.html
+      # As a Wire employee, for Wire-internal discussions and context see
+      # * https://wearezeta.atlassian.net/browse/FS-33
+      # * https://wearezeta.atlassian.net/browse/FS-444
       ssl-ciphers: "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256"
       http2-max-field-size: 16k
       http2-max-header-size: 32k
@@ -28,11 +32,11 @@ nginx-ingress:
 # redirect them to the correct service, whilst maintaining the source ip
 # address.  The ingress controller is sort of taking over the role of what
 # kube-proxy was doing before.
-# More information: 
+# More information:
 #   https://kubernetes.io/docs/tutorials/services/source-ip/#source-ip-for-services-with-typenodeport
 #   https://kubernetes.github.io/ingress-nginx/deploy/baremetal/
 #
-# There are also downsides to setting externalTrafficPolicy: Local 
+# There are also downsides to setting externalTrafficPolicy: Local
 # Please look at the following blog post, which very clearly explains the upsides and
 # downsides of this setting
 #   https://www.asykim.com/blog/deep-dive-into-kubernetes-external-traffic-policies
