updated helm configmap

--- a/charts/galley/templates/configmap.yaml
+++ b/charts/galley/templates/configmap.yaml
@@ -68,5 +68,9 @@ data:
         fileSharing:
           {{- toYaml .settings.featureFlags.fileSharing | nindent 10 }}
         {{- end }}
+        {{- if .settings.featureFlags.sndFactorPasswordChallenge }}
+        sndFactorPasswordChallenge:
+          {{- toYaml .settings.featureFlags.sndFactorPasswordChallenge | nindent 10 }}
+        {{- end }}
       {{- end }}
   {{- end }}
