--- a/libs/hscim/hscim.cabal
+++ b/libs/hscim/hscim.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: cca3008213a478b2de914ed4e3bb1946613cc6cf4103168bacbe9b002e73764b
+-- hash: 2da65611e95f11548f3104d80299b2331491a1fcfb9fb7b1971fe1bca31776df
 
 name:           hscim
 version:        0.3.6
@@ -88,14 +88,14 @@ library
       TypeSynonymInstances
   ghc-options: -Wall -Werror
   build-depends:
-      aeson >=1.4.5 && <1.5
+      aeson >=2
     , aeson-qq >=0.8.2 && <0.9
-    , attoparsec >=0.13.2 && <0.14
+    , attoparsec >=0.13.2 && <0.15
     , base >=4.12 && <4.15
     , bytestring >=0.10.8 && <0.11
     , case-insensitive >=1.2.1.0 && <1.3
     , email-validate >=2.3.2 && <2.4
-    , hashable >=1.2.7 && <1.4
+    , hashable >=1.2.7 && <1.5
     , hedgehog >=1.0.1 && <1.1
     , hspec >=2.7.1 && <2.8
     , hspec-expectations >=0.8.2 && <0.9
@@ -116,7 +116,7 @@ library
     , servant-client-core >=0.16.2 && <0.19
     , servant-server >=0.16.2 && <0.19
     , stm >=2.5.0 && <2.6
-    , stm-containers >=1.1.0 && <1.2
+    , stm-containers >=1.1.0 && <1.3
     , string-conversions >=0.4.0 && <0.5
     , template-haskell >=2.14.0 && <2.17
     , text >=1.2.3 && <1.3
@@ -124,7 +124,7 @@ library
     , unordered-containers >=0.2.10 && <0.3
     , uuid >=1.3.13 && <1.4
     , wai >=3.2.2 && <3.3
-    , wai-extra >=3.0.28 && <3.1
+    , wai-extra >=3.0.28 && <3.2
     , warp >=3.2.28 && <3.4
   default-language: Haskell2010
 
@@ -153,14 +153,14 @@ executable hscim-server
       TypeSynonymInstances
   ghc-options: -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson >=1.4.5 && <1.5
+      aeson >=2
     , aeson-qq >=0.8.2 && <0.9
-    , attoparsec >=0.13.2 && <0.14
+    , attoparsec >=0.13.2 && <0.15
     , base >=4.12 && <4.15
     , bytestring >=0.10.8 && <0.11
     , case-insensitive >=1.2.1.0 && <1.3
     , email-validate >=2.3.2 && <2.4
-    , hashable >=1.2.7 && <1.4
+    , hashable >=1.2.7 && <1.5
     , hedgehog >=1.0.1 && <1.1
     , hscim
     , hspec >=2.7.1 && <2.8
@@ -182,7 +182,7 @@ executable hscim-server
     , servant-client-core >=0.16.2 && <0.19
     , servant-server >=0.16.2 && <0.19
     , stm >=2.5.0 && <2.6
-    , stm-containers >=1.1.0 && <1.2
+    , stm-containers >=1.1.0 && <1.3
     , string-conversions >=0.4.0 && <0.5
     , template-haskell >=2.14.0 && <2.17
     , text >=1.2.3 && <1.3
@@ -190,7 +190,7 @@ executable hscim-server
     , unordered-containers >=0.2.10 && <0.3
     , uuid >=1.3.13 && <1.4
     , wai >=3.2.2 && <3.3
-    , wai-extra >=3.0.28 && <3.1
+    , wai-extra >=3.0.28 && <3.2
     , warp >=3.2.28 && <3.4
   default-language: Haskell2010
 
@@ -236,14 +236,14 @@ test-suite spec
   build-tool-depends:
       hspec-discover:hspec-discover
   build-depends:
-      aeson >=1.4.5 && <1.5
+      aeson >=2
     , aeson-qq >=0.8.2 && <0.9
-    , attoparsec >=0.13.2 && <0.14
+    , attoparsec >=0.13.2 && <0.15
     , base >=4.12 && <4.15
     , bytestring >=0.10.8 && <0.11
     , case-insensitive >=1.2.1.0 && <1.3
     , email-validate >=2.3.2 && <2.4
-    , hashable >=1.2.7 && <1.4
+    , hashable >=1.2.7 && <1.5
     , hedgehog >=1.0.1 && <1.1
     , hscim
     , hspec >=2.7.1 && <2.8
@@ -265,7 +265,7 @@ test-suite spec
     , servant-client-core >=0.16.2 && <0.19
     , servant-server >=0.16.2 && <0.19
     , stm >=2.5.0 && <2.6
-    , stm-containers >=1.1.0 && <1.2
+    , stm-containers >=1.1.0 && <1.3
     , string-conversions >=0.4.0 && <0.5
     , template-haskell >=2.14.0 && <2.17
     , text >=1.2.3 && <1.3
@@ -273,6 +273,6 @@ test-suite spec
     , unordered-containers >=0.2.10 && <0.3
     , uuid >=1.3.13 && <1.4
     , wai >=3.2.2 && <3.3
-    , wai-extra >=3.0.28 && <3.1
+    , wai-extra >=3.0.28 && <3.2
     , warp >=3.2.28 && <3.4
   default-language: Haskell2010
