--- a/libs/hscim/package.yaml
+++ b/libs/hscim/package.yaml
@@ -38,13 +38,13 @@ extra-source-files:
   - CHANGELOG
 
 dependencies:
-  -  aeson                >= 1.4.5 && < 1.5
-  -  attoparsec           >= 0.13.2 && < 0.14
+  -  aeson                >= 2
+  -  attoparsec           >= 0.13.2 && < 0.15
   -  bytestring           >= 0.10.8 && < 0.11
   -  base                 >= 4.12  && < 4.15
   -  case-insensitive     >= 1.2.1.0 && < 1.3
   -  scientific           >= 0.3.6 && < 0.4
-  -  hashable             >= 1.2.7 && < 1.4
+  -  hashable             >= 1.2.7 && < 1.5
   -  text                 >= 1.2.3 && < 1.3
   -  time                 >= 1.8.0 && < 1.10
   -  template-haskell     >= 2.14.0 && < 2.17
@@ -60,7 +60,7 @@ dependencies:
   -  hspec-expectations   >= 0.8.2 && < 0.9
   -  http-types           >= 0.12.3 && < 0.13
   -  wai                  >= 3.2.2 && < 3.3
-  -  wai-extra            >= 3.0.28 && < 3.1
+  -  wai-extra            >= 3.0.28 && < 3.2
   -  http-api-data        >= 0.4.1 && < 0.5
   -  http-media           >= 0.8.0 && < 0.9
   -  hw-hspec-hedgehog    >= 0.1.0 && < 0.2
@@ -72,7 +72,7 @@ dependencies:
   -  servant-client       >= 0.16.2 && < 0.19
   -  servant-client-core  >= 0.16.2 && < 0.19
   -  warp                 >= 3.2.28 && < 3.4
-  -  stm-containers       >= 1.1.0 && < 1.2
+  -  stm-containers       >= 1.1.0 && < 1.3
   -  string-conversions   >= 0.4.0 && < 0.5
   -  uuid                 >= 1.3.13 && < 1.4
   -  retry                >= 0.8.1.0 && < 0.9
