Parsing of GroupId and a golden test module

--- a/libs/wire-api/package.yaml
+++ b/libs/wire-api/package.yaml
@@ -153,6 +153,7 @@ tests:
     - cassava
     - currency-codes
     - directory
+    - either
     - iso3166-country-codes
     - iso639
     - lens
