--- a/libs/hscim/hscim.cabal
+++ b/libs/hscim/hscim.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 2da65611e95f11548f3104d80299b2331491a1fcfb9fb7b1971fe1bca31776df
+-- hash: 492b6e29bec45fc722bb0c706c9bc29c4b8e86fa0bc88cc74e390c09026d2ea8
 
 name:           hscim
 version:        0.3.6
@@ -253,6 +253,7 @@ test-suite spec
     , http-media >=0.8.0 && <0.9
     , http-types >=0.12.3 && <0.13
     , hw-hspec-hedgehog >=0.1.0 && <0.2
+    , indexed-traversable
     , list-t >=1.0.4 && <1.1
     , microlens >=0.4.10 && <0.5
     , mmorph >=1.1.3 && <1.2
