--- a/cabal.project
+++ b/cabal.project
@@ -55,6 +55,21 @@ packages:
 
 source-repository-package
     type: git
+    location: https://github.com/brendanhay/amazonka
+    tag: f73a957d05f64863e867cf39d0db260718f0fadd
+    subdir: lib/amazonka
+            lib/amazonka-core
+            lib/services/amazonka-cloudfront
+            lib/services/amazonka-dynamodb
+            lib/services/amazonka-s3
+            lib/services/amazonka-ses
+            lib/services/amazonka-sns
+            lib/services/amazonka-sqs
+            lib/services/amazonka-sso
+            lib/services/amazonka-sts
+
+source-repository-package
+    type: git
     location: https://github.com/dpwright/HaskellNet-SSL
     tag: ca84ef29a93eaef7673fa58056cdd8dae1568d2d
 
@@ -88,19 +103,6 @@ source-repository-package
     location: https://github.com/vincenthz/hs-certificate
     tag: a899bda3d7666d25143be7be8f3105fc076703d9
     subdir: x509-store
-
-source-repository-package
-    type: git
-    location: https://github.com/wireapp/amazonka
-    tag: 412172d8c28906591f01576a78792de7c34cc3eb
-    subdir: amazonka
-            amazonka-cloudfront
-            amazonka-dynamodb
-            amazonka-s3
-            amazonka-ses
-            amazonka-sns
-            amazonka-sqs
-            core
 
 source-repository-package
     type: git
