--- a/cabal.project
+++ b/cabal.project
@@ -155,6 +155,11 @@ source-repository-package
 
 source-repository-package
     type: git
+    location: https://gitlab.com/axeman/swagger
+    tag: e2d3f5b5274b8d8d301b5377b0af4319cea73f9e
+
+source-repository-package
+    type: git
     location: https://gitlab.com/twittner/wai-routing
     tag: 7e996a93fec5901767f845a50316b3c18e51a61d
 
