--- a/stack.yaml
+++ b/stack.yaml
@@ -128,6 +128,7 @@ extra-deps:
 - servant-swagger-1.1.10
 - foldl-1.4.12
 - stache-2.3.1
+- microlens-aeson-2.4.1
 
 # Use latest amazonka from upstream to support aeson >= 2
 - git: https://github.com/brendanhay/amazonka
