Store MLS public keys on client registration

--- a/services/brig/package.yaml
+++ b/services/brig/package.yaml
@@ -43,6 +43,7 @@ library:
   - bytestring >=0.10
   - bytestring-conversion >=0.2
   - cassandra-util >=0.16.2
+  - cql-io
   - comonad
   - conduit >=1.2.8
   - containers >=0.5
@@ -217,6 +218,7 @@ executables:
     - cassandra-util
     - containers
     - cookie
+    - data-default
     - data-timeout
     - email-validate
     - exceptions
