--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -61,6 +61,7 @@ library
       Brig.Data.LoginCode
       Brig.Data.MLS.KeyPackage
       Brig.Data.MLS.KeyPackage.Instances
+      Brig.Data.MLS.PublicKey
       Brig.Data.PasswordReset
       Brig.Data.Properties
       Brig.Data.Types
@@ -200,6 +201,7 @@ library
     , conduit >=1.2.8
     , containers >=0.5
     , cookie >=0.4
+    , cql-io
     , cryptobox-haskell >=0.1.1
     , currency-codes >=2.0
     , data-default >=0.5
@@ -500,6 +502,7 @@ executable brig-integration
     , cassandra-util
     , containers
     , cookie
+    , data-default
     , data-timeout
     , email-validate
     , exceptions
