WIP: Introducing the 'Member (Final IO) r' constraint everywhere
- This seems wrong. See why this constraint propagates everywhere

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -63,6 +63,7 @@ library
       Brig.Data.User
       Brig.Data.UserKey
       Brig.Data.UserPendingActivation
+      Brig.Effects.Retry
       Brig.Effects.SFT
       Brig.Email
       Brig.Federation.Client
