--- a/cabal.project
+++ b/cabal.project
@@ -55,21 +55,6 @@ packages:
 
 source-repository-package
     type: git
-    location: https://github.com/brendanhay/amazonka
-    tag: f73a957d05f64863e867cf39d0db260718f0fadd
-    subdir: lib/amazonka
-            lib/amazonka-core
-            lib/services/amazonka-cloudfront
-            lib/services/amazonka-dynamodb
-            lib/services/amazonka-s3
-            lib/services/amazonka-ses
-            lib/services/amazonka-sns
-            lib/services/amazonka-sqs
-            lib/services/amazonka-sso
-            lib/services/amazonka-sts
-
-source-repository-package
-    type: git
     location: https://github.com/dpwright/HaskellNet-SSL
     tag: ca84ef29a93eaef7673fa58056cdd8dae1568d2d
 
@@ -103,6 +88,21 @@ source-repository-package
     location: https://github.com/vincenthz/hs-certificate
     tag: a899bda3d7666d25143be7be8f3105fc076703d9
     subdir: x509-store
+
+source-repository-package
+    type: git
+    location: https://github.com/wireapp/amazonka
+    tag: 1acd0133490d615934dc9e1f5b97045580e0e379
+    subdir: lib/amazonka
+            lib/amazonka-core
+            lib/services/amazonka-cloudfront
+            lib/services/amazonka-dynamodb
+            lib/services/amazonka-s3
+            lib/services/amazonka-ses
+            lib/services/amazonka-sns
+            lib/services/amazonka-sqs
+            lib/services/amazonka-sso
+            lib/services/amazonka-sts
 
 source-repository-package
     type: git
