Add nginz routes for MLS endpoints

--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -123,6 +123,9 @@ nginx_conf:
     - path: /clients
       envs:
       - all
+    - path: /mls/key-packages
+      envs:
+      - all
     - path: /properties
       envs:
       - all
