--- a/deploy/services-demo/conf/nginz/nginx.conf
+++ b/deploy/services-demo/conf/nginz/nginx.conf
@@ -266,6 +266,11 @@ http {
       proxy_pass http://brig;
     }
 
+    location /mls/key-packages {
+      include common_response_with_zauth.conf;
+      proxy_pass http://brig;
+    }
+
     location /properties {
       include common_response_with_zauth.conf;
       proxy_pass http://brig;
