brig option for setting verification timeout + integration test for expired code

--- a/services/brig/brig.integration.yaml
+++ b/services/brig/brig.integration.yaml
@@ -134,6 +134,7 @@ turn:
 
 optSettings:
   setActivationTimeout: 5
+  setVerificationTimeout: 5
   setTeamInvitationTimeout: 5
   setExpiredUserCleanupTimeout: 1
   setTwilio: test/resources/twilio-credentials.yaml
