--- a/tools/stern/package.yaml
+++ b/tools/stern/package.yaml
@@ -18,7 +18,7 @@ library:
   - -funbox-strict-fields
   dependencies:
   - base                      >= 4.5     && < 5
-  - aeson                     >= 0.11
+  - aeson                     >= 2.0.1.0 && < 2.1
   - bilge                     >= 0.12
   - brig-types                >= 0.9.6
   - bytestring                >= 0.10
