Schema instances for QueuedNotification
Also remove roundtrip tests

--- a/libs/types-common/types-common.cabal
+++ b/libs/types-common/types-common.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 2c3bc5bfc76fcdf9df35835ee7538dde7612554c1364af5a68136e44fa66e22b
+-- hash: c96f28e5df032a16461ccd4944f8fb85415e9f9ca5290959f15954c8429ded7d
 
 name:           types-common
 version:        0.16.0
@@ -91,6 +91,7 @@ library
       QuickCheck >=2.9
     , aeson >=2.0.1.0
     , attoparsec >=0.11
+    , attoparsec-iso8601
     , base ==4.*
     , base16-bytestring >=0.1
     , base64-bytestring >=1.0
