--- a/libs/types-common/package.yaml
+++ b/libs/types-common/package.yaml
@@ -17,6 +17,7 @@ library:
   dependencies:
   - aeson >=2.0.1.0
   - attoparsec >=0.11
+  - attoparsec-iso8601
   - base16-bytestring >=0.1
   - base ==4.*
   - base64-bytestring >=1.0
